--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
         "DB_PORT":"5432",
         "DB_USER":"postgres",
         "DB_PASS":"admin",
-        "DB_NAME":"postgres"
+        "DB_NAME":"postgres",
+        "PSW": "dundek-woctiz-heqqY8"
     }
 }
